src/Application/ImageGridBundle/Resources/public/css/main.css
#content {
width: 500px;
float: left;
}
#sidebar {
width: 200px;
float: left;
       background-color: gray;
}
#zoom {
height: 200px;
float: right;
}
#move-up {
  margin-left: 30px;
float: left;
}
#move-left {
float: left;
clear: left;
}
#move-right {
float: left;
}
#move-down {
float: left;
clear: left;
       margin-left: 25px;
}
#reload {
float: left;
clear: left;
margin: 20px;
}

